--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-2019, macOS-latest]
-        python-version: ["3.10", "3.11"]
+        python-version: ["3.10", ]
     name: ${{ matrix.os }}, Python ${{ matrix.python-version }} lint and test
     steps:
       - uses: actions/checkout@v2
