--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,11 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+        os: [
+#          ubuntu-latest,
+          windows-latest,
+#          macOS-latest,
+        ]
         python-version: ["3.10", ]
     name: ${{ matrix.os }}, Python ${{ matrix.python-version }} lint and test
     steps:
