--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,9 +9,9 @@ jobs:
     strategy:
       matrix:
         os: [
-#          ubuntu-latest,
+          ubuntu-latest,
           windows-latest,
-#          macOS-latest,
+          macOS-latest,
         ]
         python-version: ["3.10", ]
     name: ${{ matrix.os }}, Python ${{ matrix.python-version }} lint and test
