--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,4 @@
 [pytest]
-filterwarnings = error
+filterwarnings =
+    error
+    ignore: numpy.ndarray size changed, may indicate binary incompatibility. *:RuntimeWarning
