--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install setuptools wheel
-          pip install -e .
+          pip install -e .[test]
       - name: Test with pytest
         run: |
           pip install pytest pytest-cov
