--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: Publish to PyPI and TestPyPI
 on: push
 
 jobs:
-  build and publish:
+  publish:
     name: Build and publish to PyPI and TestPyPI
     runs-on: ubuntu-latest
     steps:
