--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ doc = [
     "sphinx-autodoc-typehints",
     "pydata-sphinx-theme",
     "jupyter-sphinx",
+    "sphinx-favicon",
 ]
 
 [project.urls]
