--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,6 +26,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install setuptools wheel
+          pip install git+https://github.com/byrdie/astropy.git@bugfix/scalar-power
           pip install -e .[test]
       - name: Test with pytest
         run: |
