Enabled parallel testing in the Github workflow.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,8 @@ dynamic = ["version"]
 
 [project.optional-dependencies]
 test = [
-    "pytest"
+    "pytest",
+    "pytest-xdist",
 ]
 doc = [
     "pytest",
