--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -55,7 +55,7 @@ jobs:
       needs: test
       runs-on: ubuntu-latest
       steps:
-        - uses: actions/setup-python
+        - uses: actions/setup-python@v5
         - name: Install deps
           run: |
             python -m pip install --upgrade pip
