--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -50,7 +50,7 @@ jobs:
         - name: Install deps
           run: |
             python -m pip install --upgrade pip
-            pip install -r pytest-cov
+            pip install pytest-cov
         - name: Download coverage artifacts
           uses: actions/download-artifact@v4
         - name: Run coverage
