--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -68,7 +68,8 @@ jobs:
           pattern: coverage_python${{matrix.python-version}}_${{ matrix.os }}*
       - name: Run coverage
         run: |
-          coverage combine coverage*
+          cd coverage
+          coverage combine .coverage*
           coverage xml
       - uses: codecov/codecov-action@v4
         with:
