--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -66,15 +66,11 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           pattern: coverage_python${{matrix.python-version}}_${{ matrix.os }}*
-      - name: If not Windows, upload coverage
-        if: runner.os != 'Windows'
+          merge-multiple: true
+      - name: Combine coverage files
         run: |
-          coverage combine coverage*/.coverage*
-          coverage xml
-      - name: If Windows, upload coverage
-        if: runner.os == 'Windows'
-        run: |
-          coverage combine coverage*\.coverage*
+          ls
+          coverage combine .coverage*
           coverage xml
       - uses: codecov/codecov-action@v4
         with:
