Added `named_arrays.ndfilters.mean_filter()` function. (#56)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "matplotlib",
     "scipy",
     'astropy',
+    "ndfilters",
 ]
 dynamic = ["version"]
 
@@ -36,6 +37,7 @@ doc = [
     "ipykernel",
     "jupyter-sphinx",
     "sphinx-favicon",
+    "pooch",
 ]
 
 [project.urls]
