--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ doc = [
     "pytest",
     "graphviz",
     "sphinx-autodoc-typehints",
+    "sphinxcontrib-bibtex",
     "pydata-sphinx-theme",
     "ipykernel",
     "jupyter-sphinx",
