--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,4 @@
 filterwarnings =
     error
     ignore: numpy.ndarray size changed, may indicate binary incompatibility. *:RuntimeWarning
+    ignore: invalid value encountered in divide *:RuntimeWarning
