--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
     "matplotlib",
     "scipy",
     'astropy',
-    "ndfilters",
+    "ndfilters==0.2.0",
     "colorsynth==0.1.3",
 ]
 dynamic = ["version"]
