Added `named_arrays.despike()` function, a wrapper around `astroscrappy.detect_cosmics()`.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "matplotlib",
     "scipy",
     'astropy',
+    "astroscrappy",
     "ndfilters==0.3.0",
     "colorsynth==0.1.3",
 ]
