--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "astroscrappy",
     "ndfilters==0.3.0",
     "colorsynth==0.1.5",
+    "regridding==0.0.4",
 ]
 dynamic = ["version"]
 
