--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ doc = [
     "pydata-sphinx-theme",
     "ipykernel",
     "jupyter-sphinx",
+    "nbsphinx",
     "sphinx-favicon",
     "pooch",
 ]
