Added `named_arrays.PolynomialFunctionArray` (#87)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,8 @@ doc = [
     "pydata-sphinx-theme",
     "ipykernel",
     "jupyter-sphinx",
+    "nbsphinx",
+    "sphinx-codeautolink",
     "sphinx-favicon",
     "pooch",
 ]
