--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
     "numpy<2",
     "matplotlib",
     "scipy",
-    'astropy<6.1.5',
+    "astropy",
     "astroscrappy",
     "ndfilters==0.3.0",
     "colorsynth==0.1.5",
