ignore divide by zero warning

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,4 @@ filterwarnings =
     error
     ignore: numpy.ndarray size changed, may indicate binary incompatibility. *:RuntimeWarning
     ignore: function 'mod' is not known to astropy's Quantity. *
+    ignore: invalid value encountered in divide
