--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ test = [
 doc = [
     "pytest",
     "graphviz",
+    "Sphinx<8.2",
     "sphinx-autodoc-typehints",
     "sphinxcontrib-bibtex",
     "pydata-sphinx-theme",
