--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ dependencies = [
     "ndfilters==0.3.0",
     "colorsynth==0.1.5",
     "regridding==0.1.1",
-    "xarray==2025.3.1",
+    "xarray",
 ]
 dynamic = ["version"]
 
