--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,4 @@ filterwarnings =
     ignore: numpy.ndarray size changed, may indicate binary incompatibility. *:RuntimeWarning
     ignore: function 'mod' is not known to astropy's Quantity. *
     ignore: invalid value encountered in divide
+    ignore: 'mode' parameter is deprecated and will be removed
