--- a/pytest.ini
+++ b/pytest.ini
@@ -5,3 +5,4 @@ filterwarnings =
     ignore: function 'mod' is not known to astropy's Quantity. *
     ignore: invalid value encountered in divide
     ignore: 'mode' parameter is deprecated and will be removed
+    ignore: More than 20 figures have been opened.
