--- a/pytest.ini
+++ b/pytest.ini
@@ -6,3 +6,9 @@ filterwarnings =
     ignore: invalid value encountered in divide
     ignore: 'mode' parameter is deprecated and will be removed
     ignore: More than 20 figures have been opened.
+
+[coverage:report]
+exclude_also =
+    return NotImplemented
+    raise ValueError
+    raise NotImplementedError
